# Freya

./: .gitignore
DXF2GCODE/: logfile.txt
GcodeGenerator/: .GcodeCommandGenerator.py.swp  .OffsetCreator.py.swo  .OffsetCreator.py.swp  .ReadWritePolysFromFile.py.swp  .baseStructureGenerator.py.swp  .config_plywood.swp  .polyFromMeshCreator.py.swp  .protSlicer.py.swo  .protSlicer.py.swp  .slicer.py.swn  .slicer.py.swo  .slicer.py.swp  .utils.py.swp  :w  GcodeCommandGenerator.py  MeshOffsetsMap  OffsetCreator.py  ReadWritePolysFromFile.py  baseStructureGenerator.py  complicatedShape.stl  config_plywood  data.txt  data1.txt  data2.txt  data3.txt  data4.txt  data5.txt  data6.txt  data7.txt  data8.txt  dataFromCgal.txt  gcdoe.ngc  gcode.gcode  gcode.ngc  out  planeFiguresExtractor.py  polyFromMeshCreator.py  printer.py  protSlicer.py  schody_stl_p2.stl  (+3 more)
GcodeGenerator/2D/: .LayersConfig.swp  .gGenRun.sh.swo  .genGcodeFromDXF.py.swn  .genGcodeFromDXF.py.swo  .genGcodeFromDXF.py.swp  2DGcode.gcode  BOT_Full_CutOut_45  BOT_Partial_CutOut_45  ConfigGenerator.py  DxfPolyCreator.py  LayersConfig  LayersConfig.xml  TOP_Full_CutOut_90  gGenRun.sh  gGenRunWin.ps1  genGcodeFromDXF.py
GcodeGenerator/3D/: .Gen3DGcode.py.swp  Gen3DGcode.py  MeshOffsetsMap  baseModelOperations.py  basicMesh.stl  data3.txt  dataFromCgal.txt  dataFromCgal_0.txt  dataFromCgal_1.txt  dataFromCgal_10.txt  dataFromCgal_11.txt  dataFromCgal_12.txt  dataFromCgal_13.txt  dataFromCgal_14.txt  dataFromCgal_15.txt  dataFromCgal_2.txt  dataFromCgal_3.txt  dataFromCgal_4.txt  dataFromCgal_5.txt  dataFromCgal_6.txt  dataFromCgal_7.txt  dataFromCgal_8.txt  dataFromCgal_9.txt  diff.stl  exported.stl  finalGcodeOptimizer.py  finalStructure.stl  gGen3DRun.sh  gcode.ngc  gen.stl  genHalfMesh.stl  genMesh.stl  (+30 more)
GcodeGenerator/CppWorkspace/ToolpathGenerator/: CMakeCache.txt  CMakeLists.txt  FileParser.h  Makefile  PolyWithHolesCreator.h  ToolpathGenerator.mk  ToolpathGenerator.project  ToolpathGenerator.txt  WritePolysIntoFile.h  cmake_install.cmake  compile_commands.json  data.txt  main.cpp
GcodeGenerator/CppWorkspace/ToolpathGenerator/Debug/: main.cpp.o.d
GcodeGenerator/CppWorkspace/ToolpathGeneratorOpt/: CMakeLists.txt  DatafileParser.h  PolyWithHolesCreator.h  ToolpathGeneratorOpt.project  WritePolysIntoFile.h  main.cpp
GcodeGenerator/CppWorkspace/ToolpathGeneratorOpt/build-debug/: CMakeCache.txt  Core_Diagnostics  Makefile  cmake_install.cmake  compile_commands.json
Madzik/: Madzik.ngc  optimised_Madzik.ngc
Projekt/: Koszty.ods
Scripts_nanocad/: Arc2Seg_US_v103y.lsp  readme.md
Workspace/: frezarka.FCStd  frezarka.FCStd1
(+692 files in other folders)
